--- a/openwisp_controller/config/templates/admin/config/clone_template_form.html
+++ b/openwisp_controller/config/templates/admin/config/clone_template_form.html
@@ -2,7 +2,7 @@
 {% load i18n l10n admin_urls static %}
 
 {% block extrahead %}
-<link rel="stylesheet" type="text/css" href="{% static "admin/config/css/clone-template-form.css" %}">
+<link rel="stylesheet" type="text/css" href="{% static 'admin/css/clone-template-form.css' %}">
 {% endblock %}
 
 {% block bodyclass %}
